--- a/css/main.sass
+++ b/css/main.sass
@@ -134,7 +134,7 @@ h1, h2
   font-size: 15px
   padding: 10px 25px
   margin-top: 15px
-  
+
 
 .blueButton
   color: #00e9ff
@@ -332,7 +332,10 @@ h1, h2
   background: #A179B7
 
 #lcarsBox
-  background: #FFCC99
+  background: #FF9966
+
+#calcBox
+  background: #43F2FA
 
 #blogBox
   background: #3F4531
@@ -352,6 +355,10 @@ h1, h2
 
 #lcarsPhoto
   background: url(/img/lcars.png) center center
+  background-size: cover
+
+#calcPhoto
+  background: url(/img/calc.png) center center
   background-size: cover
 
 #blogPhoto
