--- a/css/main.sass
+++ b/css/main.sass
@@ -483,6 +483,15 @@ h1, h2
       margin: 0
     p
       display: none
+  #resumeDiv
+    color: white
+    font-family: "RobotoThin"
+    width: 300px
+    height: 60px
+    h1
+      font-size: 30px
+    h3
+      font-size: 20px
 
 /* Auto height footer and center align elements in footer at max 770px
 @media only screen and (max-width: 770px)
