Fix accidental button delete

--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,17 @@ h1, h2 {
   .lcarsButton:active {
     background: #727272; }
 
+.calcButton {
+  color: #6653B7;
+  border: 2px solid #6653B7; }
+  .calcButton:hover {
+    background: #6653B7;
+    color: black; }
+  .calcButton:focus {
+    outline: 0 !important; }
+  .calcButton:active {
+    background: #727272; }
+
 .lightGreenButton {
   color: #C8C586;
   border: 2px solid #C8C586; }
