--- a/css/main.sass
+++ b/css/main.sass
@@ -169,6 +169,17 @@ h1, h2
   &:active
     background: #727272
 
+.calcButton 
+  color: #6653B7
+  border: 2px solid #6653B7
+  &:hover
+    background: #6653B7
+    color: black
+  &:focus
+    outline: 0 !important
+  &:active
+    background: #727272
+
 .lightGreenButton
   color: #C8C586
   border: 2px solid #C8C586
