--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ h1, h2 {
   background-size: cover; }
 
 #calcPhoto {
-  background: url(/img/calc.png) center center;
+  background: url(/img/calcBanner.png) center center;
   background-size: cover; }
 
 #blogPhoto {
